# listdict

./: .gitignore  __init__.py  pyproject.toml  readme.md
